# realtime-crypto-dashboard

./: .gitignore  README.md  crypto_ai_analysis_claude.py  crypto_ai_analysis_gemini.py  crypto_history_data.py  dashboard.py  dashboard_binance.py  prompt.txt  pyproject.toml  realtime_chart.py  reatime_data.py  smc_analysis.py  streamlit_app.py  test.py
.streamlit/: config.toml  styles.css
ai_analysis_scripts/: crypto_ai_analysis_claude.py  crypto_ai_analysis_gemini.py
app/: main.py
binance/: crypto_history_data_binance.py  reatime_data_binance.py
src/ai/analysis/: parse_analysis.py  smc_analysis.py
src/ai/analyzers/: claude_analyzer.py  gemini_analyzer.py
src/ai/prompts/: system_prompt.txt  user_prompt.txt
src/api/binance/: dashboard_binance.py
src/api/bybit/: history_data.py
src/components/charts/: candlestick_chart.py  realtime_chart.py
